--- a/qa_chatbot_em(gpt)_llm(hf).ipynb
+++ b/qa_chatbot_em(gpt)_llm(hf).ipynb
@@ -27,7 +27,7 @@
    "source": [
     "import os\n",
     "\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n"
+    "os.environ[\"OPENAI_API_KEY\"] = \"\"\n"
    ]
   },
   {
